basic menu construct and fix commands that i broke shifting open/new to NWEditor instead of the editor

--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -9,20 +9,25 @@
 
 html, body
   height 100%
+  margin 0
+  padding 0
   -webkit-user-select none
 
 body
   overflow hidden
-  margin 0
-  padding 0
   font-family 'Monaco', 'Menlo', 'Ubuntu Mono', 'Consolas', 'source-code-pro', monospace
   display flex
   flex-direction column
   align-items stretch
   align-content stretch
+  flex 1 0 auto
+  min-height 100%
   
 input[type='file']
   display none
+  
+li
+  list-style-type none
 
 .titlebar
   -webkit-app-region drag
@@ -38,6 +43,40 @@ input[type='file']
     padding-right 10px
     border-right 1px solid $foreground
     font-size 12px
+    
+  .menubar
+    padding 0
+    margin 0
+    font-size 11px
+    z-index 99
+    
+    li
+      display inline-block
+      padding 4px 8px
+      
+      .menu
+        display none
+        position absolute
+        z-index 999
+        padding 8px 0
+        margin 4px 0 0 -8px
+        background $background
+        min-width 200px
+        
+        &.active
+          display block
+          
+        & > li
+          display flex
+          justify-content space-between
+          position relative
+          padding 0 8px
+          
+          .shortcut
+            color mix($foreground, $background, 70%)
+          
+          &:hover
+            background mix($foreground, $background, 10%)
     
   .window-controls
     position absolute
@@ -100,7 +139,6 @@ input[type='file']
       width 0
       
     .tree
-      list-style-type none
       margin 0
       white-space nowrap
       padding-left 7px
